[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/SliderBox.gd" type="Script" id=1]

[node name="SliderBox" type="HBoxContainer"]
margin_top = 33.0
margin_right = 318.0
margin_bottom = 62.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 27.0
margin_bottom = 29.0
text = "R "

[node name="HSlider" type="HSlider" parent="."]
margin_left = 31.0
margin_right = 202.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 255.0

[node name="SpinBox" type="SpinBox" parent="."]
margin_left = 206.0
margin_right = 318.0
margin_bottom = 29.0
max_value = 255.0
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
